# app/Models/User.php
@@ -12,7 +12,7 @@ use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 
-#[Fillable(['name', 'email', 'password'])]
+#[Fillable(['name', 'email', 'password', 'must_change_password'])]
 #[Hidden(['password', 'remember_token'])]
 class User extends Authenticatable
 {
@@ -29,6 +29,7 @@ class User extends Authenticatable
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
+            'must_change_password' => 'boolean',
         ];
     }
 
@@ -54,5 +55,16 @@ class User extends Authenticatable
                 'is_active',
             ])
             ->withTimestamps();
+    }
+
+    /**
+     * Store memberships of this user, including owned stores.
+     *
+     * Exposed as a first-class model so membership operations can be
+     * authorized with a policy and returned through an API resource.
+     */
+    public function memberships(): HasMany
+    {
+        return $this->hasMany(StoreMember::class);
     }
 }
